# dpdl

./: .pre-commit-config.yaml  Cargo.toml  README.md  dpdl
.github/workflows/: Tests.yml  test.yml
src/: instruction.rs  instructions.rs  lib.rs  main.rs  parsing.rs  utils.rs
tests/: hello.rs  parser_test.rs  proc.xml  test.xml
