[package]
name = "dpdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
clap = { version = "4.4.6", features = ["derive"] }
roxmltree = { version = "0.18.0", features = [ "positions" ] }
termtree = "0.4.1"
